--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,32 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+    // console.log(audio);
+    if (!audio) {
+      return; // stops function from running
+    }
 
+    audio.currentTime = 0; // rewinds audio
+    audio.play();
+    key.classList.add('playing'); // adds the 'playing' class
+  }
+
+function removeTransition(e) {
+  // console.log(e);
+  // console.log(e.propertyName);
+  if (e.propertyName !== 'transform') {
+    return; // skips if 'transform'
+  }
+  this.classList.remove('playing');
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+window.addEventListener('keydown', playSound);
 </script>
 
 
